@@ -24,7 +24,7 @@ provided by tt(man -e bobcat manipulators).
 Beyond this section the section bf(CATEGORIES) groups classes that
 somehow belong together in various categories.
 
-The following classes and template functions are available:
+The following classes and functions are available:
 
     bf(FBB::Align): Specifies tt(Table(Buf)) column and element
     alignments.nl()
@@ -166,7 +166,11 @@ The following classes and template functions are available:
     implementing symmetric cryptography.nl()
     Manpage(isymcryptstreambuf)
 
-    bf(FBB::Hash...): Various template classes implementing mapping containers
+    bf(FBB::Iterator): a class template creating a bidirectional iterator
+    returning values of a specified type.nl()
+    Manpage(iterator)
+
+    bf(FBB::Hash...): Various class templates implementing mapping containers
     using hashing.nl()
     Manpage(hash)
 
@@ -278,8 +282,8 @@ The following classes and template functions are available:
     numbers. nl()
     Manpage(randbuffer)
 
-    bf(FBB::Ranger): class creating ranges that are accepted by range-based
-    for-loops. Also offered: a tt(ranger) function template. nl()
+    bf(FBB::Ranger): a class template creating ranges that are accepted by
+    range-based for-loops. Also offered: a tt(ranger) function template. nl()
     Manpage(ranger)
 
     bf(FBB::ReadLineBuf): implements a tt(streambuf) using the Gnu
@@ -300,6 +304,10 @@ The following classes and template functions are available:
     bf(FBB::repeat): Two short extensions of the STL
     tt(for_each) generic algorithm. nl()
     Manpage(repeat)
+
+    bf(FBB::ReverseIterator): a class template creating a bidirectional
+    reverse iterator returning values of a specified type.nl()
+    Manpage(reverseiterator)
 
     bf(FBB::Selector): Offers timed delays and multiple file I/O. nl()
     Manpage(selector)
@@ -414,6 +422,7 @@ categories are offered:
     it() bf(STREAMS AND FILES)
     it() bf(SHARED MEMORY)
     it() bf(TABLES)
+    it() bf(VARIOUS TEMPLATES)
     it() bf(VARIOUS OTHER CLASSES)
     it() bf(DEPRECATED CLASSES)
     )    
@@ -494,7 +503,6 @@ categories are offered:
     Manpage(syslogbuf)
 
 
-
     it() bf(GENERIC ALGORITHM EXTENSIONS)
 
     bf(FBB::binary_search): A modification of the STL tt(binary_search)
@@ -509,7 +517,6 @@ categories are offered:
     bf(FBB::repeat): Two short extensions of the STL 
     tt(for_each) generic algorithm. nl()
     Manpage(repeat)
-
 
 
     it() bf(INTERNET / NETWORKING)
@@ -788,7 +795,12 @@ categories are offered:
     bf(FBB::TableSupport): Support class for the class tt(Table(Buf)).nl()
     Manpage(tablesupport)
 
-    it() bf(VARIOUS OTHER CLASSES)
+    it() bf(VARIOUS TEMPLATES)
+
+    bf(FBB::binary_search): A modification of the STL tt(binary_search)
+    algorithm returning the location of the searched value in a sorted series
+    of values. nl()
+    Manpage(binarysearch)
 
     bf(FBB::BinOps): A series of function templates implementing binary
     operators for classes that implement the matching binary assignment
@@ -799,12 +811,43 @@ categories are offered:
         functionality nl()
     Manpage(fswap)
 
-    bf(FBB::Indent): Class and manipulators performing text indentation. nl()
-    Manpage(indent)
-
-    bf(FBB::Hash...): Various template classes implementing mapping containers
+    bf(FBB::Hash...): Various class templates implementing mapping containers
     using hashing.nl()
     Manpage(hash)
+
+    bf(FBB::Iterator): a class template creating a bidirectional iterator
+    returning values of a specified type.nl()
+    Manpage(iterator)
+
+    bf(FBB::LinearMap): a class template container implementing a map using
+    a linear search algorithm.nl()
+    Manpage(linearmap)
+
+    bf(FBB::PtrIter): Input iterator whose dereferenced value returns a
+    pointer rather than a reference to an element. Also offers: a tt(ptrIter)
+    function template. nl()
+    Manpage(ptriter)
+
+    bf(FBB::Ranger): a class template creating ranges that are accepted by
+    range-based for-loops. Also offered: a tt(ranger) function template. nl()
+   Manpage(ranger)
+
+    bf(FBB::repeat): Two short extensions of the STL 
+    tt(for_each) generic algorithm. nl()
+    Manpage(repeat)
+
+    bf(FBB::ReverseIterator): a class template creating a bidirectional
+    reverse iterator returning values of a specified type.nl()
+    Manpage(reverseiterator)
+
+    bf(FBB::TypeTrait): Traits class template to determine various
+    characteristics of types.nl()
+    Manpage(typetrait)
+
+    it() bf(VARIOUS OTHER CLASSES)
+
+    bf(FBB::Indent): Class and manipulators performing text indentation. nl()
+    Manpage(indent)
 
     bf(FBB::OneKey): Single keystroke input, not requiring `Return'.nl()
     Manpage(onekey)
@@ -813,25 +856,12 @@ categories are offered:
     values.nl()
     Manpage(primefactors)
 
-    bf(FBB::PtrIter): Input iterator whose dereferenced value returns a
-    pointer rather than a reference to an element. Also offers: a tt(ptrIter)
-    function template. nl()
-    Manpage(ptriter)
-
-    bf(FBB::Ranger): class creating ranges that are accepted by range-based
-    for-loops. Also offered: a tt(ranger) function template. nl()
-    Manpage(ranger)
-
     bf(FBB::String): Offers extended tt(std::string) functionality.nl()
     Manpage(string)
 
     bf(FBB::StringLine): Offers tt(operator>>) extracting lines from
         tt(std::istream) objects.nl()
     Manpage(stringline)
-
-    bf(FBB::TypeTrait): Traits class template to determine various
-    characteristics of types.nl()
-    Manpage(typetrait)
 
     bf(FBB::User): Determines the current user's parameters from
     tt(/etc/passwd).nl()
