@@ -233,7 +233,7 @@ bf(LinearMap) offers the following member functions:
     )
 
 manpagesection(EXAMPLE)
-    verbinsert(CODE)(../../linearmap/driver.cc)
+    verbinsert(CODE)(../../linearmap/driver/driver.cc)
 
 manpagefiles()
     em(bobcat/linearmap) - defines the class interface
