@@ -23,7 +23,7 @@ void man()
         }
     }
 
-    yo = makelist("*.yo") - (list)LIBRARY ".yo";
+    yo = makelist("*.yo") - (list)LIBRARY ".yo" - (list)"reverseiter.yo";
 
     for (idx = sizeof(yo); idx--; )
     {
