@@ -1,0 +1,5 @@
+template <typename Type>
+inline Iterator<Type>::Iterator(Type const &value)
+:
+    d_value(value)
+{}
