@@ -1,0 +1,5 @@
+template <typename Type>
+inline Type &Iterator<Type>::operator*()
+{
+    return d_value;
+}
