@@ -1,0 +1,5 @@
+template <typename Type>
+inline Type const &Iterator<Type>::operator*() const
+{
+    return d_value;
+}
