@@ -1,3 +1,9 @@
+bobcat (3.21.00)
+
+  * Added the class templates Iterator and ReverseIterator
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 15 Feb 2014 12:25:07 +0100
+
 bobcat (3.20.01)
 
   * Added the LinearMap(initializer_list<value_type>) constructor to the
@@ -7,7 +13,7 @@ bobcat (3.20.01)
 
 bobcat (3.20.00)
 
-  * Added the class template LinearMap implenting an associative array using
+  * Added the class template LinearMap implementing an associative array using
     linear searching.    
 
   * Fixed a bug in ArgConfig's option(string *dest, char const *key). The
